<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/laptop_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitStart" />

        <TextView
            style="@style/TextView"
            android:id="@+id/laptop_price"
            android:layout_gravity=""
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="25sp"
            android:textColor="?attr/colorPrimary"
            android:textFontWeight="900"/>

        <TextView
            style="@style/TextView"
            android:id="@+id/laptop_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="32sp" />

        <TextView
            style="@style/TextView"
            android:id="@+id/laptop_detail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1" />

        <TextView
            style="@style/TextView"
            android:textSize="12sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/cpu" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_cpu"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/gpu" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_gpu"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/ram" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_ram"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/screen" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_screen"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/storage" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_storage"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/battery" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_battery"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dimensions" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_dimensions"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextView"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/weight" />

                <TextView
                    style="@style/TextView"
                    android:id="@+id/laptop_weight"
                    android:textSize="14sp"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/picture_of_me" />

            <TextView
                style="@style/TextView"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_name" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buy"
            android:text="@string/buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/btn_wishlist"
            android:text="@string/wishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>